# CppProjectSample

./: .gitignore  CMakeLists.txt  LICENSE  PUSH.bat  README.md
inc/: util.hpp
inc/projectA/: projectA.hpp
inc/projectB/: projectB.hpp
inc/projectC/: projectC.hpp
res/static/projectA/: resA.txt
res/static/projectB/: resB.txt
res/static/projectB/test/: resB2.txt
src/: CMakeLists.txt
src/projectA/: CMakeLists.txt  projectA.cpp
src/projectB/: CMakeLists.txt  projectB.cpp
src/projectC/: CMakeLists.txt
